--- a/src/style/MyProjects/MyProjects.css
+++ b/src/style/MyProjects/MyProjects.css
@@ -74,4 +74,9 @@
     }
 }
 
+@media (max-width: 768px) {
 
+    .container {
+        min-height: unset;
+    }
+}
